# trace-pipeline

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  Makefile  NOTICE  ONBOARDING.md  README.md  SECURITY.md  pyproject.toml  run_audit.py
.githooks/: install.sh  pre-push
benchmarks/: self_test.py  self_test_results.md
data/: audit_length_analysis.json  gsm8k_dev_200.json  instruct_max_new768.json  self_consistency_full.json  t0v2_aggregate.json  winner_max_new768.json
docs/: BRANCH_PROTECTION.md  ENTERPRISE_AUDIT_DEMO.md  TRACE_TO_TRAINING_10MIN.md  dataset-card-template.md  ecosystem-map.md
eval_trust/: README.md  __main__.py  conformal_ci.py  exploit_surface.py  lm_eval_bridge.py  paired_stats.py
evomerge/: __init__.py  __main__.py  audit_report.py  conformal_ci.py  dataset_card.py  export.py  io.py  registry.py  trust_score.py
examples/: README.md  recipe10_lm_eval_bridge.py  recipe11_rollout_to_sft.py  recipe12_rollout_to_dpo.py  recipe13_compliance_sft.py  recipe14_eval_harness.py  recipe15_significance.py  recipe16_full_loop_demo.py  recipe17_aep_trust_demo.py  recipe18_bfcl_import.py  recipe19_tau_bench_import.py  recipe1_paired_mcnemar.py  recipe20_compliance_training_full.py  recipe2_wilson_ci.py  recipe3_paired_bootstrap.py  recipe4_lottery_rate.py  recipe5_t0v2_truncation.py  recipe6_aggregate_decision.py  recipe7_end_to_end.py  recipe8_conformal.py  recipe9_sample_size.py
fixtures/: fixtures.lock.json
schemas/: aep-record.schema.json  compliance-eval-record.schema.json  (+9 more)
(+122 files in other folders)
