[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-trust"
version = "0.1.0"
description = "Audit your LLM benchmark numbers before someone else does"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "telleroutlook" }]
keywords = ["llm", "evaluation", "audit", "mcnemar", "conformal", "reproducibility"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "scipy>=1.11", "sympy>=1.12"]

[project.urls]
Homepage = "https://github.com/telleroutlook/evomerge-framework"
Paper = "https://github.com/telleroutlook/evomerge-framework/blob/main/papers/eval_trust/draft.pdf"

[tool.setuptools.packages.find]
include = ["eval_trust*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
